Fix bug 80591 - Mobile. Fix Add tag field being cut off in tag edit panel

--- a/packages/shared/components/tag-management/TagManagement.module.scss
+++ b/packages/shared/components/tag-management/TagManagement.module.scss
@@ -227,7 +227,7 @@
 
 .input[data-size="base"] {
   padding: 4px 0px;
-  flex-grow: 0;
+  flex: 0 0 auto;
 }
 
 .checkCross {
